[gd_scene load_steps=10 format=2]

[ext_resource path="res://players/player_2.tscn" type="PackedScene" id=1]
[ext_resource path="res://players/player_1.tscn" type="PackedScene" id=2]
[ext_resource path="res://user_interface/hud/hud.tscn" type="PackedScene" id=3]
[ext_resource path="res://fight/fight.gd" type="Script" id=4]
[ext_resource path="res://user_interface/instructions/instructions.tscn" type="PackedScene" id=5]
[ext_resource path="res://user_interface/countdown/countdown.tscn" type="PackedScene" id=6]
[ext_resource path="res://user_interface/winner_display/winner_display.tscn" type="PackedScene" id=7]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 512, 8 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 32.25, 256 )

[node name="Fight" type="Node"]
script = ExtResource( 4 )

[node name="Floor" type="StaticBody2D" parent="."]
position = Vector2( 0, 504 )
collision_layer = 2
collision_mask = 3

[node name="Polygon2D" type="Polygon2D" parent="Floor"]
position = Vector2( 7.93798, 0 )
scale = Vector2( 0.992248, 1 )
polygon = PoolVector2Array( -8, -8, 1024, -8, 1024, 8, -8, 8 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Floor"]
position = Vector2( 512, 0 )
shape = SubResource( 1 )

[node name="Ceiling" type="StaticBody2D" parent="."]
position = Vector2( 0, 504 )
collision_layer = 2
collision_mask = 3

[node name="CollisionShape2D" type="CollisionShape2D" parent="Ceiling"]
position = Vector2( 512, -496 )
shape = SubResource( 1 )

[node name="WallLeft" type="StaticBody2D" parent="."]
position = Vector2( -64, 0 )
scale = Vector2( 0.992248, 1 )
collision_layer = 2
collision_mask = 3

[node name="CollisionShape2D" type="CollisionShape2D" parent="WallLeft"]
position = Vector2( 32.25, 256 )
shape = SubResource( 2 )

[node name="WallRight" type="StaticBody2D" parent="."]
position = Vector2( -64, 0 )
scale = Vector2( 0.992248, 1 )
collision_layer = 2
collision_mask = 3

[node name="CollisionShape2D" type="CollisionShape2D" parent="WallRight"]
position = Vector2( 1128.75, 256 )
shape = SubResource( 2 )

[node name="Player1" parent="." instance=ExtResource( 2 )]
position = Vector2( 80, 480 )

[node name="Player2" parent="." instance=ExtResource( 1 )]
position = Vector2( 944, 480 )
collision_mask = 1
player_name = "Player"

[node name="OverlayLayer" type="CanvasLayer" parent="."]

[node name="WinnerDisplay" parent="OverlayLayer" instance=ExtResource( 7 )]
visible = false

[node name="Countdown" parent="OverlayLayer" instance=ExtResource( 6 )]

[node name="HUD" parent="OverlayLayer" instance=ExtResource( 3 )]

[node name="InstructionsLayer" type="CanvasLayer" parent="."]
layer = 2

[node name="Instructions" parent="InstructionsLayer" instance=ExtResource( 5 )]

[node name="DeathTimer" type="Timer" parent="."]
wait_time = 3.0
one_shot = true

[connection signal="finished" from="OverlayLayer/Countdown" to="." method="_on_Countdown_finished"]
[connection signal="hidden" from="InstructionsLayer/Instructions" to="." method="_on_Instructions_hidden"]
[connection signal="timeout" from="DeathTimer" to="." method="_on_DeathTimer_timeout"]
